feat: add desktop layout for main page

--- a/shelter/pages/styles/abstracts/_variables.scss
+++ b/shelter/pages/styles/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $color-dark-l: #545454;
 $color-dark-m: #B2B2B2;
 $color-dark-s: #CDCDCD;
 $color-light: #FFFFFF;
+$color-light-l: #F6F6F6;
 $color-light-s: #FAFAFA;
 $color-background: #F6F6F6;
 
