--- a/shelter/pages/styles/abstracts/_placeholders.scss
+++ b/shelter/pages/styles/abstracts/_placeholders.scss
@@ -1,8 +1,20 @@
-%background {
+%background-texture {
     background: url(../../../assets/images/background/noise_transparent@2x.png),
     radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
 }
 
+%background-grey {
+    background-color: $color-light-l;
+}
+
 %transition {
     transition: $light-transition;
+}
+
+%padding-container {
+    padding: 80px 0 100px 0;
+}
+
+%letter-spacing {
+    letter-spacing: 0.06em;
 }
