--- a/shelter/pages/styles/base/_custom-settings.scss
+++ b/shelter/pages/styles/base/_custom-settings.scss
@@ -15,6 +15,26 @@ body {
     box-sizing: border-box;
 }
 
+h1 {
+    margin: 0; padding: 0;
+}
+
+h2 {
+    margin: 0; padding: 0;
+}
+
+h3 {
+    margin: 0; padding: 0;
+}
+
+h4 {
+    margin: 0; padding: 0;
+}
+
+h5 {
+    margin: 0; padding: 0;
+}
+
 p {
     margin: 0;
 }
