--- a/shelter/pages/styles/base/_typography.scss
+++ b/shelter/pages/styles/base/_typography.scss
@@ -3,29 +3,50 @@ html {
 }
 
 .project-title {
+    width: 310px;
     @include font(4.4rem, 57.2px, $color-light);
 }
 
 .section-title {
     @include font(3.5rem, 45.5px, $color-dark-l);
+    @extend %letter-spacing;
+
+    &_center {
+        text-align: center;
+    }
 }
 
 h3 {
     @include font(2rem, 22.72px, $color-dark-l);
+    @extend %letter-spacing;
 }
 
 h4 {
     @include font(2rem, 23px, $color-dark-l);
+    @extend %letter-spacing;
 }
 
 h5 {
     @include font(1.5rem, 16.5px, $color-dark-l);
+    @extend %letter-spacing;
 }
 
 .content {
-    @include font(1.5rem, 160%, $color-dark-xl, $font-arial);
+    @include font(1.5rem, 160%, $family: $font-arial);
+
+    &-light {
+        color: $color-dark-s;
+    }
+
+    &-dark {
+        color: $color-dark-xl;
+    }
 }
 
 .footnote {
-    @include font(1.5rem, 160%, $color-dark-xl, $font-arial);
+    @include font(1.2rem, 18px, $color-dark-m, $font-arial, $style: italic);
+}
+
+.no-spacing {
+    letter-spacing: 0px;
 }
