--- a/shelter/pages/styles/components/_logo.scss
+++ b/shelter/pages/styles/components/_logo.scss
@@ -8,7 +8,7 @@
 
 .logo__title {
     @include font(3.2rem, 35.2px, $color-primary);
-    letter-spacing: 0.06em;
+    @extend %letter-spacing;
     margin-bottom: 10px;
 }
 
