--- a/shelter/pages/styles/style.css
+++ b/shelter/pages/styles/style.css
@@ -1,9 +1,21 @@
-.header {
+.footer, .gradient {
   background: url(../../../assets/images/background/noise_transparent@2x.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
 }
 
-.nav__link {
+.donation, .our-friends {
+  background-color: #F6F6F6;
+}
+
+.pet__content, .nav__link, .button {
   transition: 0.3s;
+}
+
+.donation__container, .help__container, .our-friends__container, .about__container {
+  padding: 80px 0 100px 0;
+}
+
+.footer-item, .card-input, .button, .logo__title, h5, h4, h3, .section-title {
+  letter-spacing: 0.06em;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -362,6 +374,31 @@ body {
   box-sizing: border-box;
 }
 
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  margin: 0;
+  padding: 0;
+}
+
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
+h4 {
+  margin: 0;
+  padding: 0;
+}
+
+h5 {
+  margin: 0;
+  padding: 0;
+}
+
 p {
   margin: 0;
 }
@@ -381,6 +418,7 @@ html {
 }
 
 .project-title {
+  width: 310px;
   font-family: 'Georgia, "Times New Roman", Times, serif';
   font-size: 4.4rem;
   line-height: 57.2px;
@@ -396,6 +434,9 @@ html {
   font-weight: 400;
   font-style: normal;
   color: #545454;
+}
+.section-title_center {
+  text-align: center;
 }
 
 h3 {
@@ -431,16 +472,26 @@ h5 {
   line-height: 160%;
   font-weight: 400;
   font-style: normal;
+  color: black;
+}
+.content-light {
+  color: #CDCDCD;
+}
+.content-dark {
   color: #4C4C4C;
 }
 
 .footnote {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.5rem;
-  line-height: 160%;
+  font-size: 1.2rem;
+  line-height: 18px;
   font-weight: 400;
-  font-style: normal;
-  color: #4C4C4C;
+  font-style: italic;
+  color: #B2B2B2;
+}
+
+.no-spacing {
+  letter-spacing: 0px;
 }
 
 .logo-link {
@@ -463,7 +514,6 @@ h5 {
   font-weight: 400;
   font-style: normal;
   color: #F1CDB3;
-  letter-spacing: 0.06em;
   margin-bottom: 10px;
 }
 
@@ -484,6 +534,57 @@ h5 {
   font-weight: 400;
   font-style: normal;
   color: #292929;
+  border: 2px solid #F1CDB3;
+  cursor: pointer;
+}
+.button-oval {
+  padding: 15px 45px;
+  border-radius: 100px;
+}
+.button-round {
+  width: 52px;
+  height: 52px;
+  font-family: 'Georgia, "Times New Roman", Times, serif';
+  font-size: 2rem;
+  line-height: 23px;
+  font-weight: 400;
+  font-style: normal;
+  color: #292929;
+  border-radius: 50%;
+}
+.button-bordered {
+  background: transparent;
+}
+.button-colored {
+  background: #F1CDB3;
+}
+.button_inactive {
+  color: #CDCDCD;
+  border-color: #CDCDCD;
+}
+.button_active {
+  background: #F1CDB3;
+}
+.button:hover {
+  background: #FDDCC4;
+  border: 2px solid #FDDCC4;
+}
+
+.card-input {
+  width: 349px;
+  padding: 10px 15px;
+  font-family: 'Georgia, "Times New Roman", Times, serif';
+  font-size: 2rem;
+  line-height: 23px;
+  font-weight: 400;
+  font-style: normal;
+  color: #545454;
+  text-align: end;
+  background: url(../../../assets/icons/credit-card.svg) no-repeat;
+  background-position: 15px 10px;
+  background-color: #F1CDB3;
+  border: none;
+  border-radius: 9px;
 }
 
 .header-container {
@@ -523,6 +624,180 @@ h5 {
 .nav__item_active {
   color: #FAFAFA;
   border-bottom: 3px solid #F1CDB3;
+}
+
+.start-screen__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: inherit;
+  flex-wrap: wrap;
+}
+
+.start-screen__content {
+  width: 460px;
+  margin-top: 163px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: flex-start;
+  gap: 42px;
+  flex-wrap: wrap;
+}
+
+.about__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: inherit;
+  flex-wrap: wrap;
+}
+
+.about__content {
+  width: 430px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: flex-start;
+  gap: 25px;
+  flex-wrap: wrap;
+}
+
+.about__img {
+  margin-right: 120px;
+}
+
+.our-friends__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 60px;
+  flex-wrap: wrap;
+}
+
+.carousel {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: inherit;
+  flex-wrap: wrap;
+}
+
+.pet {
+  width: 270px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: inherit;
+  flex-wrap: wrap;
+  border-radius: 9px;
+  overflow: hidden;
+  background-color: #FAFAFA;
+}
+.pet:hover .pet__content {
+  background-color: #FFFFFF;
+}
+
+.pet__content {
+  width: 100%;
+  padding: 30px 0;
+  background-color: #FAFAFA;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.help__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 60px;
+  flex-wrap: wrap;
+}
+
+.help__list {
+  padding: 0 87px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
+  gap: 120px;
+  flex-wrap: wrap;
+}
+
+.help-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.donation__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.donation__content {
+  width: 380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: flex-start;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.footer__container {
+  padding-top: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: inherit;
+  flex-wrap: wrap;
+}
+
+.footer__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: flex-start;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+
+.footer-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  font-family: 'Georgia, "Times New Roman", Times, serif';
+  font-size: 2rem;
+  line-height: 23px;
+  font-weight: 400;
+  font-style: normal;
+  color: #F1CDB3;
+}
+
+.footer__section-title {
+  color: #FFFFFF;
 }
 
 /*# sourceMappingURL=style.css.map */
