--- a/shelter/pages/styles/layout/_header.scss
+++ b/shelter/pages/styles/layout/_header.scss
@@ -1,4 +1,8 @@
-.header-container {
+.header__container {
     padding: 60px 0;
     @include flex($justify-content: space-between, $align-items: center);
+
+    &_our-pets-page {
+        padding: 30px 0;
+    }
 }
