--- a/shelter/pages/styles/layout/_navigation.scss
+++ b/shelter/pages/styles/layout/_navigation.scss
@@ -1,4 +1,5 @@
 .nav__list {
+    @include font(1.5rem, 24px, $family: $font-arial);
     margin: 0; padding: 0;
     @include flex();
     list-style: none;
@@ -6,15 +7,31 @@
 
 .nav__item {  
     margin-left: 35px;
-    @include font(1.5rem, 24px, $color-dark-s, $font-arial);
 
-    :hover {
-        color: $color-light-s;
+    &_light {
+        color: $color-dark-s;
+
+        &:hover {
+            color: $color-light-s;
+        }
+    
+        &_active {
+            color: $color-light-s;
+            border-bottom: 3px solid $color-primary;
+        }
     }
 
-    &_active {
-        color: $color-light-s;
-        border-bottom: 3px solid $color-primary;
+    &_dark {
+        color: $color-dark-l;
+
+        &:hover {
+            color: $color-dark-3xl;
+        }
+    
+        &_active {
+            color: $color-dark-3xl;
+            border-bottom: 3px solid $color-primary;
+        }
     }
 }
 
