--- a/shelter/pages/styles/layout/_our-friends.scss
+++ b/shelter/pages/styles/layout/_our-friends.scss
@@ -5,4 +5,37 @@
 .our-friends__container {
     @extend %padding-container;
     @include flex(60px, $flex-direction: column, $align-items: center);
+
+    &_our-pets-page {
+        gap: 45px;
+    }
+}
+
+.pets {
+    @include flex($justify-content: center, $align-items: center);
+    gap: 40px;
+}
+
+.pet {
+    width: 270px;
+    @include flex($flex-direction: column, $align-items: center);
+    border-radius: 9px;
+    overflow: hidden;
+    background-color: $color-light-s;
+
+    &:hover .pet__content  {
+        background-color: $color-light;
+    }
+}
+
+.pet__content {
+    width: 100%;
+    padding: 30px 0;
+    background-color: $color-light-s;
+    @include flex(30px, $flex-direction: column, $align-items: center);
+    @extend %transition;
+}
+
+.controllers {
+    @include flex(20px, $justify-content: center);
 }
