feat: update flex for our-friend and help containers

--- a/shelter/pages/styles/abstracts/_mixins.scss
+++ b/shelter/pages/styles/abstracts/_mixins.scss
@@ -7,11 +7,11 @@
     color: $color;
 }
 
-@mixin flex ($gap: 0px, $justify-content: start, $flex-direction: row, $align-items: flex-start) {
+@mixin flex ($gap: 0px, $justify-content: start, $flex-direction: row, $align-items: flex-start, $wrap: wrap) {
     display: flex;
     flex-direction: $flex-direction;
     justify-content: $justify-content;
     align-items: $align-items;
     gap: $gap;
-    flex-wrap: wrap;
+    flex-wrap: $wrap;
 }
