--- a/shelter/pages/styles/layout/_carousel.scss
+++ b/shelter/pages/styles/layout/_carousel.scss
@@ -1,4 +1,4 @@
 .carousel {
-    @include flex($justify-content: space-between, $align-items: center);
+    width: 100%;
+    @include flex($justify-content: space-between, $align-items: center, $wrap: no-wrap);
 }
-
