--- a/shelter/pages/styles/style.css
+++ b/shelter/pages/styles/style.css
@@ -715,9 +715,16 @@ h5 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 0px;
+  gap: 90px;
   flex-wrap: wrap;
-  gap: 40px;
+}
+.pets_our-pets-page {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 30px;
+  flex-wrap: wrap;
 }
 
 .pet {
@@ -758,12 +765,13 @@ h5 {
 }
 
 .carousel {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 0px;
-  flex-wrap: wrap;
+  flex-wrap: no-wrap;
 }
 
 .help__container {
@@ -779,13 +787,14 @@ h5 {
   padding: 0 87px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: flex-start;
-  gap: 120px;
+  gap: 55px;
   flex-wrap: wrap;
 }
 
 .help-item {
+  width: 15%;
   display: flex;
   flex-direction: column;
   justify-content: center;
