feat: update in according with specification

--- a/shelter/pages/styles/layout/_header.scss
+++ b/shelter/pages/styles/layout/_header.scss
@@ -1,3 +1,9 @@
+.header_sticky {
+    position: sticky;
+    top: 0;
+    background-color: $color-light;
+}
+
 .header__container {
     padding: 60px 0;
     @include flex($justify-content: space-between, $align-items: center);
