feat: add adaptivity for tablet+

--- a/shelter/pages/styles/abstracts/_variables.scss
+++ b/shelter/pages/styles/abstracts/_variables.scss
@@ -15,3 +15,7 @@ $font-georgia: 'Georgia, "Times New Roman", Times, serif';
 $font-arial: Arial, Helvetica, sans-serif;
 
 $light-transition: .3s;
+
+$desktop: 1280px;
+$tablet: 780px;
+$mobile: 320px;
