--- a/shelter/pages/styles/layout/_header.scss
+++ b/shelter/pages/styles/layout/_header.scss
@@ -8,6 +8,10 @@
     padding: 60px 0;
     @include flex($justify-content: space-between, $align-items: center);
 
+    @media (max-width: $desktop) {
+        padding: 30px 0;
+    }
+
     &_our-pets-page {
         padding: 30px 0;
     }
