--- a/shelter/pages/styles/layout/_help.scss
+++ b/shelter/pages/styles/layout/_help.scss
@@ -6,9 +6,17 @@
 .help__list {
     padding: 0 87px;
     @include flex($gap: 55px, $justify-content: center);
+
+    @media (max-width: $desktop) {
+        justify-content: space-between;
+    }
 }
 
 .help-item {
     width: 15%;
     @include flex(30px, $flex-direction: column, $align-items: center, $justify-content: center);
+
+    @media (max-width: $desktop) {
+        width: 26.4%;
+    }
 }
