--- a/shelter/pages/styles/layout/_donation.scss
+++ b/shelter/pages/styles/layout/_donation.scss
@@ -10,9 +10,24 @@
         gap: 60px;
         flex-direction: column-reverse;
     }
+
+    @media (max-width: $tablet) {
+        gap: 42px;
+    }
 }
 
 .donation__content {
     width: 380px;
     @include flex(20px, $flex-direction: column);
+
+    @media (max-width: $tablet) {
+        width: 300px;
+        align-items: center;
+    }
+}
+
+.donation__img {
+    @media (max-width: $tablet) {
+        width: 260px;
+    }
 }
