--- a/shelter/pages/styles/layout/_footer.scss
+++ b/shelter/pages/styles/layout/_footer.scss
@@ -10,6 +10,12 @@
         gap: 60px;
         justify-content: center;
     }
+
+    @media (max-width: $tablet) {
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
 }
 
 .footer__content {
@@ -23,6 +29,10 @@
     &_address {
         gap: 33px;
     }
+
+    @media (max-width: $tablet) {
+        align-items: center;
+    }
 }
 
 .footer-item {
@@ -32,5 +42,12 @@
 }
 
 .footer__section-title {
+    width: 280px;
     color: $color-light;
+}
+
+.footer__image {
+    @media (max-width: $tablet) {
+        width: 260px;
+    }
 }
