--- a/shelter/pages/styles/layout/_help.scss
+++ b/shelter/pages/styles/layout/_help.scss
@@ -8,15 +8,27 @@
     @include flex($gap: 55px, $justify-content: center);
 
     @media (max-width: $desktop) {
+        padding: 0 39px;
         justify-content: space-between;
     }
+
+    @media (max-width: $tablet) {
+        padding: 0 5px;
+        gap: 30px;
+    }
+    
 }
 
 .help-item {
-    width: 15%;
+    width: 15.7%;   
     @include flex(30px, $flex-direction: column, $align-items: center, $justify-content: center);
 
     @media (max-width: $desktop) {
-        width: 26.4%;
+        width: 170px;
+    }
+
+    @media (max-width: $tablet) {
+        gap: 20px;
+        width: 130px;
     }
 }
