--- a/shelter/pages/styles/layout/_navigation.scss
+++ b/shelter/pages/styles/layout/_navigation.scss
@@ -3,6 +3,10 @@
     margin: 0; padding: 0;
     @include flex();
     list-style: none;
+
+    @media (max-width: $tablet) {
+        display: none;
+    }
 }
 
 .nav__item {  
