--- a/shelter/pages/styles/layout/_start-screen.scss
+++ b/shelter/pages/styles/layout/_start-screen.scss
@@ -11,10 +11,6 @@
     }
 }
 
-.start-screen__button {
-    width: 207px;
-}
-
 .start-screen__content {
     width: 460px;
     margin-top: 163px;
@@ -23,11 +19,20 @@
     @media (max-width: $desktop) {
         margin-top: 30px;
     }
+
+    @media (max-width: $tablet) {
+        align-items: center;
+    }
 }
 
 .start-screen__img {
     @media (max-width: $desktop) {
         width: 569px;
         margin-left: 70px;
+    }
+
+    @media (max-width: $tablet) {
+        width: 260px;
+        margin-left: 40px;
     }
 }
